2011-02-17  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        REGRESSION: Copied content loses formatting on paste to external apps.
        https://bugs.webkit.org/show_bug.cgi?id=47615
        <rdar://problem/9001214>

        This patch adds a way for WebKit2 to create NSAttributedStrings from
        a DOM range without using the AppKit api initWithDOMRange that internally
        needs to access the WebView. The NSAttributedString is needed to create
        RTF formats in the pasteboard.
        This is to be considered a first step, since in the future we want to have
        an implementation based on the TextIterator.
        
        * WebCore.xcodeproj/project.pbxproj: Added new file.
        * platform/mac/HTMLConverter.h: Added.
        * platform/mac/HTMLConverter.mm: Added.
        * platform/mac/PasteboardMac.mm:
        (WebCore::Pasteboard::writeSelection): We now use WebHTMLConverter
        class for WebKit2 to create the NSAttributedString from the DOM range.

2011-02-23  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=46500, make positioned elements work with vertical text.

        Patch computePositionedLogicalHeightUsing to be writing-mode-aware. 

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::computePositionedLogicalWidthUsing):
        (WebCore::RenderBox::computePositionedLogicalHeightUsing):
        * rendering/RenderBox.h:

2011-02-23  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] Flash item placed on wrong location right after load
        https://bugs.webkit.org/show_bug.cgi?id=37769

        If a plugin is GtkSocket based, do not set the widget allocation until the
        window is actually embedded in the parent. When the window is embedded, use
        any pending allocation for the call to gtk_widget_size_allocate. This bug