@@ -23,11 +23,12 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#import "DocumentLoader.h"
 #import "DOMDocument.h"
 #import "DOMRange.h"
 
-using namespace WebCore;
+namespace WebCore {
+    class DocumentLoader;
+}
 
 @interface WebHTMLConverter : NSObject {
     NSMutableAttributedString *_attrStr;
@@ -35,7 +36,7 @@ using namespace WebCore;
     DOMDocument *_document;
     DOMRange *_domRange;
     NSMutableArray *_domStartAncestors;
-    DocumentLoader *_dataSource;
+    WebCore::DocumentLoader *_dataSource;
     NSString *_standardFontFamily;
     CGFloat _textSizeMultiplier;
     CGFloat _webViewTextSizeMultiplier;
