@@ -1,3 +1,9 @@
+2011-02-23  Anders Carlsson  <andersca@apple.com>
+
+        Fix build.
+
+        * platform/mac/HTMLConverter.h:
+
 2011-02-17  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Darin Adler.
